# triangle-py

./: .build-env-activate  .dev-env-activate  .gitignore  README.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
.env/: pyvenv.cfg
.github/workflows/: python-package.yml
tests/: TestCase.py  error-question.py  test_triangle.py  testing.ipynb
triangle/: triangle.py
triangle-py/data/: dahms reserve triangles.xlsx  mack1994.csv
triangle/data/: taylorashe.csv
triangle_py/: __init__.py  test_triangle.ipynb  triangle.py
triangle_py.egg-info/: PKG-INFO  SOURCES.txt
triangle_py/data/: dahms reserve triangles.xlsx  mack1994.csv  taylorashe.csv
