[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "triangle-py"
version = "0.1.0"
authors = [
    {name="Andy Weaver", email="andrewayersweaver@gmail.com"}
]

[description]
description = "A Python dataclass that extends pandas dataframes and series to use for property-casualty loss development triangles."

[license]
name = "MIT License"

